[package]
name = "rs-tars2zips"
version = "0.1.0"
edition = "2024"

description = "Converts tar files to zip files"
license = "Apache-2.0"
documentation = "https://docs.rs/crate/rs-tars2zips/latest"
repository = "https://github.com/takanoriyanagitani/rs-tars2zips"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "forbid"

[profile.release-wasi]
inherits = "release"
lto = true
strip = true
opt-level = 's'
codegen-units = 16

[dependencies.flate2]
version = "1.1.1"
default-features = false
features = [
	"rust_backend",
]

[dependencies.rs-tar2zip]
version = "0.1.0"
default-features = false
features = [
]
